syntax = "proto3";

package mock;
option go_package = "https://github.com/frejabv/MockPassive/;protobuf";

service Mock {
  rpc Increment (IncrementRequest) returns (IncrementReply) {}
  rpc SetValue (SetValueRequest) returns (SetValueReply) {}
}

message IncrementRequest {}

message IncrementReply {
	int32 newValue = 1;
}

message SetValueRequest {
  int32 value = 1;
}

message SetValueReply {}